--- a/Notes.tex
+++ b/Notes.tex
@@ -8,7 +8,7 @@
 \usepackage[none]{hyphenat}
 \date{}
 \title{MUSC360 Music in Western Culture Before 1900: Music as a Public Art}
-\begin{document} 
+\begin{document}
   \author{Michael Li}
   \title{MUSC360 Music in Western Culture Before 1900: Music as a Public Art}
   \maketitle
@@ -49,7 +49,7 @@
   \begin{itemize}
     \item \textbf{monophonic} in texture (only 1 line sung in unison)
     \item Pitch organization: \textbf{mode 7} (final - G, reciting tone - D). Reciting tone is the note that is repeated a lot.
-    \item Melody is constructed from 
+    \item Melody is constructed from
       \begin{itemize}
         \item Chanting on reciting tone
         \item \textbf{Melodic formulas} (melodic material shaped around punctuation and the grammar of the text).
@@ -75,7 +75,7 @@
         \item multiple long \textbf{melismas}
         \item melodic formulas
       \end{itemize}
-    \item Structure: 
+    \item Structure:
     \begin{itemize}
       \item Response (opening by soloist and rest by choir). Material is \textbf{melismatic} (ornate and dozens of notes per syllable)
       \item Verse (marked V.) mostly soloist and choir enters at the end (entrance marked by *). Material is \textbf{melismatic}
@@ -93,7 +93,7 @@
       Important to note that because this is adding to the original chant, tropes make the chant \textbf{proper}
   \end{itemize}
   \subsubsection{Organum}
-  Earliest type of \textbf{polyphony} that consists of a 2-part texture 
+  Earliest type of \textbf{polyphony} that consists of a 2-part texture
   \begin{itemize}
     \item lower voice chant \textbf{(tenor)} sung by choir
     \item newly composed upper voice (\textbf{duplum}) sung by soloist
@@ -109,7 +109,7 @@
   \end{itemize}
   School of Notre-Dame brought a major innovation to music: \textbf{Rhythmic modes} system of rhythmic organization for organum for both composition and notation.
   \begin{itemize}
-    \item notes are notated as either \textbf{long} or \textbf{breve} 
+    \item notes are notated as either \textbf{long} or \textbf{breve}
     \item Rhythmic patterns are grouped into \textbf{perfections} (units of 3)
   \end{itemize}
   Leonin's style, called \textbf{organum purum} ("pure organum") comprised of
@@ -141,7 +141,7 @@
   \subsection{Secular Music and Types of Secular Music}
   Secular music was mostly seen in royal courts, festivals, parties.
   \subsubsection{Estampie}
-  Popular dance at the time. 
+  Popular dance at the time.
   \begin{itemize}
     \item primary purpose of the music was to support the dancing so percussion instruments in particular were useful for counting steps.
     \item Monophonic tune was performed by an ensemble of loud instruments so that the music could be heard across the royal hall
@@ -188,7 +188,7 @@
   Earliest recount of simultaneous sounding consonances are found in writings of \textbf{Hucbald} and \textbf{Regino} in the 9th century. The first writing of unambiguous polyphonic singing is in \textbf{Musica enchiradis} from the early 10th century. \\ \\
   Examples of polyphonic execution
   \begin{itemize}
-    \item Wales: instrument execution was fast and lively 
+    \item Wales: instrument execution was fast and lively
     \item Britain: 2 part singing, 1 in a low register and the other singing something soothing to the ear at a higher range
   \end{itemize}
   Earliest polyphonic schools were centered around monasteries in France, England, Spain. It reached the School of Notre-Dame in the 12th/13th centuries and musicians from Paris were the first to notate both pitch and rhythm. \textbf{Anonymus IV} in his notes recounts several important figures during this time period. Most notable were
@@ -248,7 +248,7 @@
   Composer, singere, and organist trained at a cathedral school. Worked in Philip the Good's court chapels until retirement and primarily composed 3-voice chansons (rondeaux and ballades)
   \subsubsection{Deuil angoisseux (ceremonial ballade (aa'bC))}
   \begin{itemize}
-    \item Setting of the famous poetic lament by Christine de Pisane. 
+    \item Setting of the famous poetic lament by Christine de Pisane.
     \item  Music is written in Cantilena style (tune in the cantus and supported by tenor/contratenor).
     \item Also uses musical rhyme (a' and C end with the same melisma; b and C start the same)
     \item Music is notably bright, major-ish harmonies
@@ -265,13 +265,13 @@
   Known for his English guise
   \begin{itemize}
     \item Primarily sacred genres (Mass movements, motets)
-    \item Preference for consonant 3 voice setting 
+    \item Preference for consonant 3 voice setting
     \item Strongly consonant, triad-dominated textures (e.g. \textbf{Quam pulchra es})
   \end{itemize}
   \subsubsection{Quam pulchra es}
   3-voice motet (short setting of Latin sacred text)
   \begin{itemize}
-    \item Freely composed setting (no borrowed chant) 
+    \item Freely composed setting (no borrowed chant)
     \item Text from \textbf{The Song of Songs} is set syllabically (musical structural, rhythmic patterns, cadence placement guided by the poetry)
     \item Homophonic texture filled with triads and 6/3 chords
   \end{itemize}
@@ -318,7 +318,7 @@
     \item \textbf{Motto technique}: all movements begin with a variant of the same duet
     \item Melodic/rhythmic gestures of L'homme arme appear in the other voices
   \end{itemize}
-  \textbf{Gloria} cantus-firmus appears once per section. Each section starts with a duet then continues in a 4-part texture 
+  \textbf{Gloria} cantus-firmus appears once per section. Each section starts with a duet then continues in a 4-part texture
   \begin{itemize}
     \item 1st statement of cantus-firmus in long notes
     \item 2nd statement is 1/3 faster; creating a hemiola
@@ -333,7 +333,7 @@
   \subsection{Messe de Nostre-Dame}
   Written by Guillaume de Machaut and was the first known polyphonic setting of the Mass Ordinary.
   \begin{itemize}
-    \item 4 voices sing continuously (no monophonic sections) 
+    \item 4 voices sing continuously (no monophonic sections)
     \item Characteristic descending motif in all movements (a unifying device)
     \item \textbf{Gloria, Credo}: freely composed (no chant)
     \item \textbf{Kyrie, Sanctus, Agnus Del, Ite Missa Est, Amen of Credo}: (texts based on local Rheims-area chants that are used in \textbf{isorhythmic procedure} in the tenor
@@ -454,7 +454,7 @@
   \begin{itemize}
     \item Music should move people by imitating speech through pitch and rhythm (single line)
     \item Part singing is never mentioned in ancient Greek description, hence it doesn't exist
-    \item Modern polyphony fails to moving people. 
+    \item Modern polyphony fails to moving people.
   \end{itemize}
   In practice, monody was
   \begin{itemize}
@@ -595,4 +595,6 @@
     \item Contrasting B (triple): style similar to instrumental dance music
     \item C (duple): longest, series of short diverse segments (imitation)
   \end{itemize}
+
+\section{I give up. This class is stupid.}
 \end{document}
